# Archon

./: .gitignore  agentHome.py  client_secret_997385589848-oti9ok7j8c1c6arg9u93t9p97jo76oad.apps.googleusercontent.com.json  credentials.json  index.html  main.py  pyproject.toml  quickstart.py  script.js  styles.css  test.py  token.json  watchTower.py
agentSessionsYaml/: 114b204d-3c02-4323-929d-5d67cdd2a147.yaml  49eba5be-0839-49b9-ad39-3cb3217c6c8b.yaml  546d2360-688a-40e7-bf98-378c80433e00.yaml
archonAgents/: .env  caseEvaluation.py  documentReview.py  legalAnalysis.py  legalClock.py  mcpAgents.py
docs/: OQ Agreement.txt
static/css/: enhancement.css  fix-layout.css  markdown.css  styles.css  tailwind-fixes.css
static/js/: markdownRenderer.js  script.js
templates/: index.html  loading.html
tmp/chromadb/3a22a64f-7c15-442c-b2f8-7419b8399a92/: index_metadata.pickle
