[project]
name = "archon-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.2.6",
    "duckduckgo-search>=2025.4.1",
    "exa-py>=1.10.0",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-genai>=1.9.0",
    "jinja2>=3.1.6",
    "mcp>=1.6.0",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "spacy>=3.8.5",
    "sqlalchemy>=2.0.40",
    "tzlocal>=5.3.1",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]
